2006-02-01  Ville Vainio  <vivainio@gmail.com>  

	* easy_install ipython==dev works correctly now.

2006-01-30  Ville Vainio  <vivainio@gmail.com>  

	* pickleshare,pspersistence,ipapi,Magic: persistence overhaul.
	Now %store and bookmarks work through PickleShare, meaning that 
	concurrent access is possible and all ipython sessions see the 
	same database situation all the time, instead of snapshot of
	the situation when the session was started. Hence, %bookmark
	results are immediately accessible from othes sessions. The database
	is also available for use by user extensions. See:
	http://www.python.org/pypi/pickleshare
	
	* hooks.py: Two new hooks, 'shutdown_hook' and 'late_startup_hook'.
	
	* aliases can now be %store'd
	
	* path.py move to Extensions so that pickleshare does not need
	IPython-specific import. Extensions added to pythonpath right
	at __init__.
	
	* iplib.py: ipalias deprecated/redundant; aliases are converted and 
	called with _ip.system and the pre-transformed command string.

2006-01-29  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (interact): Fix that we were not catching
	KeyboardInterrupt exceptions properly.  I'm not quite sure why the
	logic here had to change, but it's fixed now.

2006-01-29  Ville Vainio  <vivainio@gmail.com>  

	* iplib.py: Try to import pyreadline on Windows.

2006-01-27  Ville Vainio  <vivainio@gmail.com>  

	* iplib.py: Expose ipapi as _ip in builtin namespace.
	Makes ipmagic (-> _ip.magic), ipsystem (-> _ip.system)
	and ip_set_hook (-> _ip.set_hook) redundant. % and ! 
	syntax now produce _ip.* variant of the commands.
	
	* "_ip.options().autoedit_syntax = 2" automatically throws
	user to editor for syntax error correction without prompting.

2006-01-27  Ville Vainio  <vivainio@gmail.com>  

	* ipmaker.py: Give "realistic" sys.argv for scripts (without 
	'ipython' at argv[0]) executed through command line. 
	NOTE: this DEPRECATES calling ipython with multiple scripts 